--- a/home/templates/home/story.html
+++ b/home/templates/home/story.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-    {% include "home/fullcontent.html" with content=story %}
+    {% include "home/content.html" with content=story %}
 {% endblock %}
