--- a/home/templates/home/image.html
+++ b/home/templates/home/image.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-    {% include "home/fullcontent.html" with content=image %}
+    {% include "home/content.html" with content=image %}
 {% endblock %}
