--- a/home/templates/home/utils/authors.html
+++ b/home/templates/home/utils/authors.html
@@ -1,5 +1,5 @@
 {% for author in authors.all %}
     {% if forloop.last and authors.count > 1 %} and {% endif %}
-    <a href="" class="solid-link">{{ author.get_full_name }}</a>
+    <a href="{% url "home:view_profile" author.pk %}" class="solid-link">{{ author.get_full_name }}</a>
     {% if not forloop.last and authors.count > 2 %},{% endif %}
 {% endfor %}
