Link staff logout button

--- a/staff/templates/staff/components/menubar.html
+++ b/staff/templates/staff/components/menubar.html
@@ -18,7 +18,7 @@
             </li>
             {% endif %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url "staff:index" %}">Logout</a>
+                <a class="nav-link" href="{% url "staff:logout" %}">Logout</a>
             </li>
         </ul>
     </div>
