--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -1,8 +1,8 @@
-<a class="item" href="{% url "staff:index" %}">Dashboard</a>
+<a class="item" href="{% url 'staff:index' %}">Dashboard</a>
 <div class="section">Stories</div>
-<a class="item">Published</a>
+<a class="item" href="{% url 'staff:story:create' %}">Upload</a>
 <a class="item">Drafts</a>
-<a class="item" href="{% url "staff:story:create" %}">Upload</a>
+<a class="item">Published</a>
 <div class="section">Content</div>
-<a class="item">Media</a>
 <a class="item">Upload</a>
+<a class="item">Media</a>
