--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -32,7 +32,8 @@
 
         {% for story in stories %}
             <h4><a href="{% url "home:read_story" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-            {{ story.created }} in <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} &raquo;</a>
+
+            {{ story.created }} {% if story.section %}in <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} &raquo;</a>{% endif %}
             <p class="text-muted">{{ story.lead|safe }}</p>
         {% endfor %}
     {% endif %}
