--- a/staff/templates/staff/story/edit.html
+++ b/staff/templates/staff/story/edit.html
@@ -51,9 +51,7 @@
 {{ form.media }}
 
 <script type="text/javascript">
-    function write() {
-      document.forms[0].story = quill.root.innerHTML;
-    }
+    function write() { document.forms[0].story = quill.root.innerHTML; }
 </script>
 
 {% endblock %}
