Made the description entry a quill editor

--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -2,7 +2,7 @@
 <a class="item" href="{% url 'staff:index' %}">Dashboard</a>
 <div class="section">Stories</div>
 <a class="item" href="{% url 'staff:story:create' %}">Upload</a>
-<a class="item">Drafts</a>
+<a class="item" href="{% url 'staff:story:view' %}">My stories</a>
 <a class="item">Published</a>
 <div class="section">Content</div>
 <a class="item" href="{% url 'staff:create_image' %}">Upload</a>
