--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -26,7 +26,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search fa-lg" aria-hidden="true"></i></button>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search fa-lg" aria-hidden="true"></i></button>
             </form>
           </div>
         </nav>
