--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -1,7 +1,14 @@
 {% load humanize %}
 {% load news %}
 
+{% if request.user.is_authenticated %}
+<div class="clearfix">
+    <h1 class="float-sm-left">{{ content.title|safe }}</h1>
+{#    <a class="btn btn-secondary float-sm-right" role="button" href="{% url "staff:story:edit" %}">Edit <i class="fas fa-edit"></i></a>#}
+</div>
+{% else %}
 <h1>{{ content.title|safe }}</h1>
+{% endif %}
 
 <hr/>
 
@@ -14,10 +21,10 @@
         </h5>
     </div>
     <div class="col-md-3 text-right">
-        <a href="https://twitter.com/intent/tweet
-            ?text=Check%20out%20this%20{{ content.descriptor }}%21
-            &hashtags=SilverChipsOnline&url=https%3A%2F%2Fsilverchips.mbhs.edu{{ request.path|urlencode }}
-            &via=mbhsSCO"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/dialog/share?display=popup&href=https://silverchips.mbhs.edu{{ request.path|urlencode }}"
+           target="_blank"><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/intent/tweet?text=Check%20out%20this%20{{ content.descriptor }}%21&hashtags=SilverChipsOnline&url=https%3A%2F%2Fsilverchips.mbhs.edu{{ request.path|urlencode }}&via=mbhsSCO"
+           target="_blank"><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
     </div>
 </div>
 
@@ -53,11 +60,11 @@
             </div>
 
             <ul class="list-group list-group-flush">
-                {% for top_story in stories|slice:":5" %}
+                {% for top_story in stories|slice:":8" %}
                     <li class="list-group-item">
                         <div class="row">
                             <div class="col-2"><strong>{{ forloop.counter }}</strong></div>
-                            <div class="col-10"><a href="{% url "home:read_story" top_story.id %}" class="solid-link">{{ top_story.title }}</a></div>
+                            <div class="col-10"><a href="{% url "home:read_story" top_story.id %}" class="solid-link">{{ top_story.title|safe }}</a></div>
                         </div>
                     </li>
                 {% endfor %}
