--- a/staff/templates/staff/story/edit.html
+++ b/staff/templates/staff/story/edit.html
@@ -18,7 +18,7 @@
         {% for error in form.title.errors %}
             <span class="error">{{ error }}</span>
         {% endfor %}
-        <input id="title" name="{{ form.title.name }}" class="form-control" type="text" placeholder="Title" value="{{ form.title.value }}">
+        <input id="title" name="{{ form.title.name }}" class="form-control" type="text" placeholder="Title" value="{% if form.title.value %}{{ form.title.value }}{% endif %}">
     </div>
 
     <div class="form-group">
