sections render properly finally

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,11 +11,11 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{% url "home:index" %}">SilverChips</a>
           <div class="collapse navbar-collapse" id="navbarDropdown">
             <ul class="navbar-nav mr-auto">
                 {% for section in section_roots %}
