--- a/home/static/home/home.scss
+++ b/home/static/home/home.scss
@@ -12,8 +12,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1#title {
     font-family: "UnifrakturCook", serif;
-    font-size: 8vw;
-    margin: 4vw 0;
+    font-size: 10vw;
+  margin: 4rem 0;
     text-align: center;
 }
 
