--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,16 +5,13 @@
 {% block content %}
     {% for section in section_roots %}
         <div class="card">
-            <div class="card-block">
+            <div class="card-header">
                 <h4 class="card-title">{{ section.title }}</h4>
             </div>
-
             <ul class="list-group list-group-flush">
-                {% for story in section.stories.all|slice:":5" %}
+                {% for story in section.all_stories.all|slice:":5" %}
                     <li class="list-group-item">
-                        <h4><a href="{% url "home:read_story" story.id %}" class="solid-link">{{ story.title }}</a></h4>
-
-                        {{ story.lead|safe }}
+                        {% include "shared/story_summary.html" with story=story %}
                     </li>
                 {% endfor %}
             </ul>
