--- a/home/templates/home/comments.html
+++ b/home/templates/home/comments.html
@@ -1,14 +1,22 @@
-<!-- todo: staggered comment and reply loading, display replies -->
-
 {% if content.comments_on %}
   <h4>All Comments ({{ authorized_comments.all.count }})</h4>
   <hr/>
+
+  <!-- post reply -->
+  <form method="post" id="reply_form" hidden>
+    {% csrf_token %}
+    Name: <input class="form-control" type="text" name="name"><br/>
+    <textarea class="form-control" name="text" cols="100" rows="5"></textarea><br/>
+    <button class="btn btn-primary form-control" value="Post" type="submit">Post</button>
+    <br/><br/>
+    <input class="btn btn-primary form-control" type="button" value="Cancel" onclick=remove_reply()>
+  </form>
 
   <form action="{% url "home:post_comment" content.pk %}" method="post">
     {% csrf_token %}
     Name: <input class="form-control" type="text" name="name"><br/>
     <textarea class="form-control" name="text" cols="100" rows="5"></textarea><br/>
-    <button class="btn btn-secondary" value="Post" type="submit">Post</button>
+    <button class="btn btn-secondary form-control" value="Post" type="submit">Post</button>
   </form>
 
   <!-- Fix to reverse ordering -->
@@ -16,12 +24,19 @@
     <div class="card" style="padding: 10px;">
       <h5 class="card-title">{{ comment.name }}</h5>
       <div class="card-block">
-        {{ comment.text }} <br/>
-        <a href="{% url "home:updoot" comment.pk content.pk%}">Like ({{ comment.rating }})</a>
-        <a href="#">Reply</a>
+        {{ comment.text }} <br/><br/>
+        <a class="btn btn-secondary" href="{% url "home:updoot" comment.pk content.pk%}">
+          <i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ comment.rating }}
+        </a>
+        <button class="btn btn-secondary" onclick=on_reply({{ comment.pk }})>
+          <i class="fa fa-reply" aria-hidden="true"></i> {{ comment.replies.count }}
+        </button>
+
+        <!-- Reply area -->
+        <div id={{ comment.pk }}>
+        </div>
 
         <!-- render replies -->
-        <br/><br/>
         {% for reply in comment.replies.all %}
           {% if reply.authorized %}
             {% include "home/replies.html" %}
@@ -35,3 +50,15 @@
 {% endif %}
 
 <br/><hr/>
+
+<script>
+  var story_pk = {{ content.pk }}
+  function on_reply(comment_pk){
+    $("#reply_form").prop("hidden", false);
+    $("#reply_form").prop("action", "/comment/" + story_pk + "/" + comment_pk);
+    $("#"+comment_pk).append($("#reply_form"));
+  }
+  function remove_reply(){
+    $("#reply_form").prop("hidden", true);
+  }
+</script>
