--- a/home/templates/shared/story_summary.html
+++ b/home/templates/shared/story_summary.html
@@ -1,3 +1,5 @@
 <h4><a href="{% url "home:read_story" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-{{ story.created }} {% if story.section %}in <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} &raquo;</a>{% endif %}
+<h6><span class="text-muted">By</span> {% include "shared/authors.html" with authors=story.authors %} <span class="text-muted">|</span>
+{{ story.created }}
+{% if story.section %}<span class="text-muted">| In</span> <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} &raquo;</a>{% endif %}</h6>
 <p class="text-muted">{{ story.lead|safe }}</p>
