fixed section displays

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -38,11 +38,16 @@
             {% endblock %}
         </div>
 
-        <footer class="footer bg-inverse text-white">
+        <footer class="footer bg-dark text-white">
             <div class="container">
                 <h4>Silver Chips Online</h4>
                 &copy; 2017 Silver Chips Online / Montgomery Blair High School | 51 University Blvd. E., Silver Spring, MD 20901
             </div>
         </footer>
+
+{#        <footer class="footer bg-inverse text-white">#}
+{#            <div class="container">#}
+{#            </div>#}
+{#        </footer>#}
     </body>
 </html>
