--- a/home/templates/shared/authors.html
+++ b/home/templates/shared/authors.html
@@ -1,4 +1,4 @@
 {% for author in authors.all %}
-    {% if forloop.last and authors.count > 1 %} and {% endif %}
+    {% if forloop.last and authors.count > 1 %} <span class="text-muted">and</span> {% endif %}
     <a href="{% url "home:view_profile" author.pk %}" class="solid-link">{{ author.get_full_name }}</a>{% if not forloop.last and authors.count > 2 %},{% endif %}
 {% endfor %}
