--- a/staff/templates/staff/components/writer/sidebar.html
+++ b/staff/templates/staff/components/writer/sidebar.html
@@ -1,8 +1,8 @@
 <!-- Sidebar seen by users in the writers group -->
 <a class="item" href="{% url 'staff:index' %}">Dashboard</a>
 <div class="section">Stories</div>
-<a class="item" href="{% url 'staff:story:create' %}">Upload</a>
-<a class="item" href="{% url 'staff:story:view' %}">My stories</a>
+<a class="item" href="{% url 'staff:stories:create' %}">Upload</a>
+<a class="item" href="{% url 'staff:stories:view' %}">My stories</a>
 <a class="item">Published</a>
 <div class="section">Content</div>
 <a class="item" href="{% url 'staff:create_image' %}">Upload</a>
