--- a/home/templates/home/comments.html
+++ b/home/templates/home/comments.html
@@ -1,78 +1,31 @@
-{% if content.comments_on %}
-  <h4>All Comments ({{ authorized_comments.all.count }})</h4>
-  <hr/>
+<div style="margin: 10px; padding: 10px; border-left: thin solid #ccc;" id="comment-{{ reply.pk }}">
+  <h5>
+    <button class="btn btn-warning btn-sm" id="toggle-button-{{ reply.pk }}" onclick=hide_comment_content({{ reply.pk }})>[-]</button>
+    {{ reply.name }}
+  </h5>
 
-  <!-- post reply -->
-  <form method="post" id="reply_form" hidden>
-    {% csrf_token %}
-    Name: <input class="form-control" type="text" name="name"><br/>
-    <textarea class="form-control" name="text" cols="100" rows="5"></textarea><br/>
-    <button class="btn btn-primary form-control" value="Post" type="submit">Post</button>
-    <br/><br/>
-    <input class="btn btn-primary form-control" type="button" value="Cancel" onclick=remove_reply()>
-  </form>
+  <div id="comment-content-{{ reply.pk }}" style="word-wrap: break-word;">
+    {{ reply.text }} <br/><br/>
+    <a class="btn btn-secondary btn-sm" href="{% url "home:updoot" content.pk reply.pk%}">
+      <i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ reply.rating }}
+    </a>
+    <button class="btn btn-secondary btn-sm" onclick=on_reply({{ reply.pk }})>
+      <i class="fa fa-reply" aria-hidden="true"></i>  {{ reply.replies.count }}
+    </button>
 
-  <form action="{% url "home:post_comment" content.pk %}" method="post">
-    {% csrf_token %}
-    Name: <input class="form-control" type="text" name="name"><br/>
-    <textarea class="form-control" name="text" cols="100" rows="5"></textarea><br/>
-    <button class="btn btn-secondary form-control" value="Post" type="submit">Post</button>
-  </form>
+    <!-- Reply area -->
+    <div id={{ reply.pk }}>
+    </div>
 
-  <!-- Fix to reverse ordering -->
-    {% for comment in authorized_comments %}
-      <div class="card" style="padding: 10px;" id="comment-{{ comment.pk }}">
-        <h5 class="card-title">
-          {{ comment.name }}
-          <button class="btn btn-warning btn-sm" id="toggle-button-{{ comment.pk }}" onclick=hide_comment_content({{ comment.pk }})>[-]</button>
-        </h5>
-        <div class="card-block" id="comment-content-{{ comment.pk }}">
-          {{ comment.text }} <br/><br/>
-          <a class="btn btn-secondary" href="{% url "home:updoot" comment.pk content.pk%}">
-            <i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ comment.rating }}
-          </a>
-          <button class="btn btn-secondary" onclick=on_reply({{ comment.pk }})>
-            <i class="fa fa-reply" aria-hidden="true"></i> {{ comment.replies.count }}
-          </button>
+    <!-- render replies -->
+    {% for reply in reply.replies.all %}
+      {% if reply.authorized %}
 
-          <!-- Reply area -->
-          <div id={{ comment.pk }}>
-          </div>
-
-          <!-- render replies -->
-          {% for reply in comment.replies.all %}
-            {% if reply.authorized %}
-              {% include "home/replies.html" %}
-            {% endif %}
-          {% endfor %}
+        <div style="margin-left: 30px;">
+          {% include "home/comments.html" %}
         </div>
-      </div>
+
+      {% endif %}
     {% endfor %}
-
-  <script>
-    var story_pk = {{ content.pk }}
-    function on_reply(comment_pk){
-      $("#reply_form").prop("hidden", false);
-      $("#reply_form").prop("action", "/comment/" + story_pk + "/" + comment_pk);
-      $("#"+comment_pk).append($("#reply_form"));
-    }
-    function remove_reply(){
-      $("#reply_form").prop("hidden", true);
-    }
-    function hide_comment_content(comment_pk){
-      $("#comment-content-"+comment_pk).prop("hidden", true);
-      $("#toggle-button-"+comment_pk).html("[+]");
-      $("#toggle-button-"+comment_pk).attr("onclick", "show_comment_content("+comment_pk+")");
-    }
-    function show_comment_content(comment_pk){
-      $("#comment-content-"+comment_pk).prop("hidden", false);
-      $("#toggle-button-"+comment_pk).html("[-]");
-      $("#toggle-button-"+comment_pk).attr("onclick", "hide_comment_content("+comment_pk+")");
-    }
-  </script>
-
-{% else %}
-  <i>Comments have been disabled.</i>
-{% endif %}
-
-<br/><hr/>
+  </div>
+</div>
