Reverse comments, remove reply counter

--- a/home/templates/home/comments.html
+++ b/home/templates/home/comments.html
@@ -10,7 +10,7 @@
       <i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ reply.rating }}
     </a>
     <button class="btn btn-secondary btn-sm" onclick=on_reply({{ reply.pk }})>
-      <i class="fa fa-reply" aria-hidden="true"></i>  {{ reply.replies.count }}
+      <i class="fa fa-reply" aria-hidden="true"></i> Reply
     </button>
 
     <!-- Reply area -->
